# kimmdy-dimerization

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  release.yml
src/kimmdy_dimerization/: kimmdy-yaml-schema.json  reaction.py
src/kimmdy_dimerization/data/: new_charges.json
tests/: .equilibrium.trr_offsets.npz  DoubleStrand_NPT.top  DoubleStrand_NPT_fixed.top  TdT_React_FF.top  TdT_from_pdb2gmx.top  TdT_inital.top  TdT_norelax.top  TdT_relax_morse.top  TdT_relax_slowgrowth.top  check_tops.py  concat.gro  conftest.py  equilibrium.gro  fixresidues.py  mda_test.py  test_dimerization_integration.py  test_get_recipes.py  visualize_top.py
tests/test_dimerization_integration/: TdT_NPT_relax.top  TdT_kimmdy.yml  TdT_kimmdy_restart.yml  TdT_md_long.mdp  TdT_md_short.mdp
tests/test_get_recipes/: equilibrium_short.gro
