[metadata]
name = kimmdy-dimerization
version = 0.1
license = GPL-3.0
description = Reaction plugin for KIMMDY describing the dimerization of thymines in DNA
long_description = file: README.md
author = Boris Schuepp
author_email = boris.schuepp@mpip-mainz.mpg.de
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    MDAnalysis
    kimmdy

python_requires = >= 3.10

[options.packages.find]
where=src

[options.package_data]
kimmdy_dimerization.data = *.json

[options.entry_points]
kimmdy.reaction_plugins =
    dimerization = kimmdy_dimerization.reaction:DimerizationReaction